--- a/beer_overflow/Gemfile
+++ b/beer_overflow/Gemfile
@@ -34,6 +34,7 @@ gem 'bcrypt', '~> 3.1.7'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
+  gem 'rspec-rails'
   gem 'byebug'
   gem 'faker', '~> 1.4.3'
   # Access an IRB console on exception pages or by using <%= console %> in views
