--- a/beer_overflow/Gemfile
+++ b/beer_overflow/Gemfile
@@ -36,6 +36,8 @@ group :development, :test do
   gem 'rspec-rails'
   gem 'byebug'
   gem 'faker', '~> 1.4.3'
+  gem 'factory_girl_rails'
+  gem 'capybara'
   # Access an IRB console on exception pages or by using <%= console %> in views
   gem 'web-console', '~> 2.0'
 
